--- a/pro-01-circuitbreaker/build.gradle
+++ b/pro-01-circuitbreaker/build.gradle
@@ -1,29 +1,7 @@
-plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.5.5'
-	id 'io.spring.dependency-management' version '1.1.7'
-}
-
-group = 'pro.developia'
-version = '0.0.1-SNAPSHOT'
-description = 'pro-01-circuitbreaker'
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
-}
-
-repositories {
-	mavenCentral()
-}
-
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+    testImplementation 'com.squareup.okhttp3:mockwebserver'
 
-tasks.named('test') {
-	useJUnitPlatform()
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
