--- a/pro-01-circuitbreaker/build.gradle
+++ b/pro-01-circuitbreaker/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
     testImplementation 'com.squareup.okhttp3:mockwebserver'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
