--- a/pro-01-circuitbreaker/build.gradle
+++ b/pro-01-circuitbreaker/build.gradle
@@ -4,6 +4,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
     testImplementation 'com.squareup.okhttp3:mockwebserver'
+    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
+
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
