--- a/pro-02-cache/build.gradle
+++ b/pro-02-cache/build.gradle
@@ -11,6 +11,12 @@ dependencies {
 
     // Caffeine
     implementation("com.github.ben-manes.caffeine:caffeine:3.1.8")
+
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs = ['-parameters']
 }
 
 tasks.register("prepareKotlinBuildScriptModel"){}
